Fixed styling so drag box doesn't overlap file navigator

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -52,7 +52,7 @@ p {
 .container-main {
   background-color: coral;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 350px 1fr;
   grid-template-rows: 40px 1fr 1fr 1fr 150px;
   height: 100vh;
   margin: 0px;
@@ -77,14 +77,14 @@ p {
 
 .header-nav-bar {
   grid-column-start: 1;
-  grid-column-end: 5;
+  grid-column-end: 3;
   grid-row-start: 1;
   background-color: grey;
 }
 
 .file-navigator {
   grid-row-start: 2;
-  grid-row-end: 4;
+  grid-row-end: 5;
   background-color: aqua;
   overflow: auto;
 }
@@ -98,11 +98,8 @@ p {
 
 .file-upload {
   grid-row-start: 5;
-  grid-row-end: 5;
+  height: 146px;
   background-color: forestgreen;
-  position: fixed;
-  bottom: 0;
-  left: 0;
 }
 
 .upload-button {
